--- a/src/home.css
+++ b/src/home.css
@@ -94,6 +94,15 @@ main {
 .main-container {
     width: 100%;
     display: flex;
+    justify-content: center;
+}
+
+.main-container-swiper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 20px;
+    overflow: hidden;
     justify-content: space-between;
 }
 
@@ -144,14 +153,115 @@ main {
     height: 25px;
 }
 
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  align-items: center;
+}
+
+#creators {
+    margin: 50px 0;
+    width: 100%;
+    display: flex;
+    height: max-content;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 10%;
+    font-size: 20px;
+    gap: 50px;
+}
+
+.creators-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.creators-header .creators-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.creators-header button {
+    width: 200px;
+    height: 50px;
+    background: none;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    border: 3px solid #A259FF;
+    gap: 10px;
+}
+
+.creators-container {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.creators-container .card {
+    width: 350px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 25px;
+    background-color: #1E1E1E;
+    padding: 20px;
+    align-items: center;
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.creators-container .card .level {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: #292929;
+    padding: 10px 15px;
+    border-radius: 25px;
+    font-weight: 500;
+}
+
+.creators-container .card img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.categories{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 50px 0;
+}
+
 @media (min-width: 791px) and (max-width: 1300px) {
     header {
         padding: 0px 5%;
-        font-size: 19px;
+        font-size: 25px;
     }
 
     .header-info {
-        width: 35%;
+        width: 100%;
     }
 
     .header-img {
@@ -175,14 +285,19 @@ main {
         margin-top: 0px;
     }
 
-    .main-container {
+    .swiper {
+        width: 100%;
+        height: 100%;
         overflow: hidden;
-        gap: 150px;
-        justify-content: center;
+        gap: 20px;
     }
 
-    .main-container .card:nth-child(3) {
-        display: none;
+    #creators{
+        padding: 0 5%;
+    }
+
+    .categories {
+        padding: 0 5%;
     }
 }
 
@@ -219,24 +334,20 @@ main {
         margin-top: 300px;
     }
 
-    .main-container{
-        justify-content: center;
-    }
-
-    .main-container .card:nth-child(3) {
-        display: none;
-    }
-
-    .main-container .card:nth-child(2) {
-        display: none;
-    }
-
     .main-container .card img{
         width: 310px;
     }
 
+    .main-container .card .box div {
+        width: 95px;
+        height: 95px;
+    }
+
     .main-container .card .box img {
-        width: 90px;
-        height: 90px;
+        width: 95px;
+        height: 95px;
+    }
+    .creators-header button {
+        display: none;
     }
 }
