--- a/src/home.css
+++ b/src/home.css
@@ -35,6 +35,11 @@ header {
     border: none;
 }
 
+.get-started:hover {
+    background-color: rgb(147, 64, 255);
+    transition: 0.5s;
+}
+
 .header-info-users {
     display: flex;
     justify-content: space-between;
@@ -206,6 +211,11 @@ main {
     gap: 10px;
 }
 
+.creators-header button:hover {
+    background-color: #A259FF;
+    transition: 0.5s;
+}
+
 .creators-container {
     width: 100%;
     height: max-content;
@@ -249,9 +259,292 @@ main {
     width: 100%;
     height: 100vh;
     display: flex;
-    align-items: center;
+    justify-content: center;
     flex-direction: column;
     margin: 50px 0;
+    padding: 0 10%;
+    gap: 25px;
+    font-size: 30px;
+}
+
+.discover {
+    width: 100%;
+    height: 85vh;
+    padding: 0 10%;
+    font-size: 25px;
+}
+
+.discover h3 {
+    color: #858584;
+}
+
+.discover .discover-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.discover .discover-header button {
+    width: 200px;
+    height: 50px;
+    background: none;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    border: 3px solid #A259FF;
+    gap: 10px;
+}
+
+.discover .discover-header button:hover {
+    background-color: #A259FF;
+    transition: 0.5s;
+}
+
+.discover-container {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.discover .discover-container .card {
+    display: flex;
+    flex-direction: column;
+}
+
+.discover .discover-container .card .inner-card {
+    background-color: #1E1E1E;
+    width: 100%;
+    padding: 20px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.discover .discover-container .card .inner-card h1 {
+    display: flex;
+}
+
+.discover .discover-container .card .inner-card .card-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.discover .discover-container .card .inner-card .card-info .price {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.discover .discover-container .card .inner-card .card-info .bid {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.discover .discover-container .card img {
+    width: 100%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.discover .discover-container .card h3 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+}
+
+.discover .discover-container .card h3 img {
+    width: 35px;
+    border-radius: 50%;
+}
+
+.timer {
+    width: 100%;
+    height: 100vh;
+    background-image: url(http://localhost:5173/src/assents/mashroom1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    margin-top: 30px;
+}
+
+.purple {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: linear-gradient(to top , #A259FF,rgba(0, 0, 0, 0));
+    display: flex;
+    align-items: end;
+    padding: 150px 10%;
+    justify-content: space-between;
+}
+
+.purple .left {
+    width: 50%;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.purple button {
+    width: 200px;
+    height: 50px;
+    background: none;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    border: 3px solid #b073ff;
+    gap: 10px;
+}
+
+.purple button:hover {
+    background-color: #b073ff;
+    transition: 0.5s;
+}
+
+.user-nick {
+    display: flex;
+    align-items: center;
+    background-color: #292929;
+    width: max-content;
+    padding: 10px 25px;
+    gap: 15px;
+    border-radius: 25px;
+}
+
+.purple .left img {
+    width: 35px;
+    border-radius: 50%;
+}
+
+.purple .right {
+    width: max-content;
+    font-size: 30px;
+    background-color: rgba(0, 0, 0, 0.26);
+    padding: 25px;
+    border-radius: 25px;
+}
+
+.hour {
+    display: flex;
+    gap: 45px;
+    margin: 15px 0;
+}
+
+.hour-info {
+    display: flex;
+    gap: 55px;
+}
+
+.working {
+    padding: 100px 10%;
+    width: 100%;
+    height: max-content;
+    font-size: 25px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.working-container {
+    width: 100%;
+    height: max-content;
+    display: flex;
+}
+
+.working .working-container .card {
+    height: 450px;
+    background-color: #3B3B3B;
+    padding: 25px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.join{
+    width: 100%;
+    height: max-content;
+    padding: 0 10%;
+    display: flex;
+    font-size: 30px;
+}
+
+.join-container{
+    width: 100%;
+    height: max-content;
+    background-color: #3B3B3B;
+    border-radius: 25px;
+    padding: 35px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.mess{
+    display: flex;
+    position: relative;
+}
+
+.join input{
+    padding: 14px 30%;
+    border: none;
+    border-radius: 25px;
+    color: black;
+    background-color: white;
+}
+
+.join button{
+    padding: 10px;
+    background: #A259FF;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    gap: 10px;
+    position: absolute;
+    top: 0;
+    right: 0px;
+}
+
+.join .img {
+    width: 625px;
+    height: 300px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+}
+
+.img img {
+    width: 100%;
 }
 
 @media (min-width: 791px) and (max-width: 1300px) {
@@ -298,6 +591,40 @@ main {
 
     .categories {
         padding: 0 5%;
+    }
+
+    .purple {
+        font-size: 20px;
+        padding: 150px 5%;
+    }
+
+    .purple .left {
+        font-size: 18px;
+    }
+
+    .purple .right {
+        font-size: 18px;
+    }
+
+    .join{
+        padding: 0 5%;
+    }
+
+    .join .img{
+        width: 100%;
+        height: 550px;
+    }
+
+    .join-container{
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .join input{
+        padding: 14px 37%;
+    }
+    .working{
+        padding: 100px 5%;
     }
 }
 
@@ -349,5 +676,42 @@ main {
     }
     .creators-header button {
         display: none;
+    }
+
+    .timer {
+        margin-top: 150px;
+    }
+
+    .purple {
+        font-size: 20px;
+        padding: 150px 5%;
+    }
+
+    .purple .left {
+        font-size: 18px;
+    }
+
+    .purple .right {
+        font-size: 18px;
+    }
+    .join{
+        padding: 0 10%;
+    }
+
+    .join .img{
+        width: 100%;
+        height: 550px;
+    }
+
+    .join-container{
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .join input{
+        padding: 14px 24%;
+    }
+    .working{
+        padding: 100px 10%;
     }
 }
